@@ -12,7 +12,7 @@ Maintainer: Ivan Kojadinovic <ivan.kojadinovic@univ-pau.fr>
 Maintainer: Martin Maechler <maechler@stat.math.ethz.ch>
 Depends: R (>= 3.1.0)
 Imports: stats, graphics, methods, stats4, Matrix, lattice, colorspace,
-  gsl, ADGofTest, stabledist (>= 0.6-4), mvtnorm, pcaPP, pspline
+ gsl, ADGofTest, stabledist (>= 0.6-4), mvtnorm, pcaPP, pspline
 Suggests: MASS, KernSmooth, sfsmisc, scatterplot3d, Rmpfr, bbmle, knitr,
  parallel, mvnormtest, partitions, polynom, randtoolbox, rugarch, Runuran,
  tseries, VGAM, VineCopula, zoo
